-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.7.0
-
None
-
Mostly CentOS-6.8, with 6.7 kernel 2.6.32_573.26.1.el6
Lustre 2.7.2-2nasS_mofed32v1.el67.20160517v2
-
3
-
9223372036854775807
Error message seen in system log on at least one production server:
(running lustre-2.7.2-1.1nasS_mofed32v1)
May 20 18:38:58 nbp1-oss1 kernel: LustreError: 38115:0:(ofd_grant.c:183:ofd_grant_sanity_check()) ofd_obd_disconnect: tot_granted 98847872 != fo_tot_granted 100945024
Reproduced on test system, (running lustre-2.7.2-2nasS_mofed32v1.el67.20160517v2), by mounting just 8 clients, running IOR write from 1, IOR read from 1, mdtest on the other 6. Then upon unmount of all 8 clients simultaneously, get the messages on each (of the two) OSS nodes:
Aug 5 08:06:36 service320 kernel: LustreError: 76476:0:(ofd_grant.c:183:ofd_grant_sanity_check()) ofd_obd_disconnect: tot_granted 69347328 != fo_tot_granted 102901760 Aug 5 08:06:36 service323 kernel: LustreError: 76171:0:(ofd_grant.c:183:ofd_grant_sanity_check()) ofd_obd_disconnect: tot_granted 69347328 != fo_tot_granted 102901760
What does this message mean, and is it cause for major concern?
We are testing in preparation for upgrade to all remaining production file systems on 8/15, so need to know whether to proceed ASAP.